modified:   ../XamarinFileHandler.Android/Resources/Resource.Designer.cs

--- a/XamarinFileHandler/XamarinFileHandler.iOS/Info.plist
+++ b/XamarinFileHandler/XamarinFileHandler.iOS/Info.plist
@@ -74,10 +74,12 @@
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string></string>
+					<string>pki</string>
 				</array>
 			</dict>
 		</dict>
 	</array>
+	<key>CFBundleName</key>
+	<string>XamarinFileHandler</string>
 </dict>
 </plist>
